--- a/src/Pages/PopularSale/PopularSale.css
+++ b/src/Pages/PopularSale/PopularSale.css
@@ -1,4 +1,5 @@
 .popularProducts{
-    border: 1px solid rgba(60, 98, 2, 0.109);
+    border: 1px solid rgba(73, 4, 4, 0.616);
+    border-radius: 5px;
     margin-left: 70px;
 }
