--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -9,11 +9,11 @@
 .toptext h1{
     font-size: 50px;
     padding-bottom: 5%;
-    color: rgb(19, 58, 19);
-    text-shadow: 1px 1px 2px white, 0 0 1em rgb(78, 106, 36), 0 0 0.2em rgb(78, 106, 36);
+    color: rgb(84, 20, 20);
+    text-shadow: 1px 1px 2px white, 0 0 1em rgba(181, 66, 66, 0.523), 0 0 0.2em rgba(98, 50, 50, 0.303);
 }
 .toptext button{
-    background-color: rgb(59, 98, 2);
+    background-color: rgba(73, 4, 4, 0.871);
     color: white;
     font-size: 16px;
     font-family: 'Libre Baskerville', serif;
@@ -23,10 +23,10 @@
     letter-spacing: 2px;
     border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    border: 1px solid rgba(188, 220, 141, 0.755);
+    border: 1px solid rgba(73, 4, 4, 0.616);
 }
 .toptext button:hover{
-    background-color: rgba(188, 220, 141, 0.755);
-    color:rgb(42, 68, 4);
-    border: 1px solid darkgreen;
+    background-color: rgba(79, 10, 10, 0.588);
+color: rgb(79, 9, 9);
+    border: 1px solid rgba(63, 5, 5, 0.266);
 }
